--- a/CSC8503/GameTech/imgui.ini
+++ b/CSC8503/GameTech/imgui.ini
@@ -29,13 +29,13 @@ Size=1000,1000
 Collapsed=0
 
 [Window][Time Window]
-Pos=466,6
-Size=317,95
+Pos=1062,6
+Size=213,132
 Collapsed=0
 
 [Window][Pause menu]
 Pos=511,314
-Size=229,176
+Size=229,220
 Collapsed=0
 
 [Window][Name window]
@@ -56,5 +56,30 @@ Collapsed=0
 [Window][Endgamehud]
 Pos=471,168
 Size=318,89
+Collapsed=0
+
+[Window][Main Menu Title]
+Pos=474,79
+Size=336,100
+Collapsed=0
+
+[Window][Paused Title]
+Pos=504,183
+Size=255,103
+Collapsed=0
+
+[Window][Level Window]
+Pos=487,29
+Size=277,74
+Collapsed=0
+
+[Window][Item Window]
+Pos=81,38
+Size=141,66
+Collapsed=0
+
+[Window][Debug]
+Pos=0,0
+Size=340,300
 Collapsed=0
 
