Add Level Edtior

--- a/CSC8503/GameTech/GameTech.vcxproj
+++ b/CSC8503/GameTech/GameTech.vcxproj
@@ -240,6 +240,7 @@
     <ClInclude Include="Level1.h" />
     <ClInclude Include="LevelBase.h" />
     <ClInclude Include="LevelTest.h" />
+    <ClInclude Include="limits.h" />
     <ClInclude Include="NetworkedGame.h" />
     <ClInclude Include="NetworkPlayer.h" />
     <ClInclude Include="Particles\ParticleEffect.h" />
